
 * 2.5.0

Fixes
  * Fix test clobbering in lib/test_util.py (PR #4000)
  * Fix MSD docs to use the correct error metric in example (Issue #3991)
  * Add 'PairIJ Coeffs' to the list of sections in LAMMPSParser.py
    (Issue #3336)

Enhancements
  * Add pickling support for Atom, Residue, Segment, ResidueGroup 
    and SegmentGroup. (PR #3953)

Changes
  * The deprecated direct indexing and `times` from the `results` attribute of
    analysis.nucleicacids' NucPairDist and WatsonCrickDist classes has been
    removed. Please use the `results.pair_distances` and `times` attributes
    instead (Issue #3744)

Deprecations


01/04/23 IAlibay

 * 2.4.2

Fixes
  * np.histogramdd calls in :class:`DensityAnalysis` now pass the `density`
    argument rather than the NumPy 1.24 removed `normed` (PR #3976)
  * visualization.streamlines_3D and visualization.streamlines no longer
    rely on the scalar return of an numpy array elementwise comparison which
    is no longer supported as of NumPy 1.25 (PR #3977)


12/17/22 IAlibay

 * 2.4.1

Fixes
* Fixes pyproject.toml minimum pin for biopython


12/16/22 IAlibay, Luthaf, hmacdope, rafaelpap, jbarnoud, BFedder, aya9aladdin,
         jaclark5, jfennick, lilyminium, orbeckst, Hakarishirenai

 * 2.4.0

Fixes
  * Update hbond analysis doc string to use exclusive bound language 
    (Issue #3847)
  * XTC and TRR readers now fail with IOError when a status except EOK (=0) is
    detected on reading a frame instead of silently continuing
  * Consolidate license files across MDAnalysis library packages (PR #3939)
  * Kwargs passed through to `MemoryReader` when using `transfer_to_memory()`
    and `in_memory=True`.
  * NoDataError raised on empty atomgroup provided to `DCDReader.timeseries` 
    was changed to ValueError (see #3901). A matching ValueError was added to
    `MemoryReader.timeseries`(PR #3890). 
  * Removes ``pbc`` kwarg from ``AtomGroup.wrap`` (Issue #3909)
  * LAMMPSDump Reader translates the box to the origin (#3741)