@@ -72,7 +72,7 @@ Functions
 .. autofunction:: minimize_vectors(vectors, box)
 """
 import numpy as np
-from numpy.lib.utils import deprecate
+import numpy.typing as npt
 
 from typing import Union, Optional, Callable
 from typing import TYPE_CHECKING
@@ -139,9 +139,8 @@ from .c_distances import (_UINT64_MAX,
 from .c_distances_openmp import OPENMP_ENABLED as USED_OPENMP
 
 
-# typing: numpy
-def _check_result_array(result: Optional[np.ndarray],
-                        shape: tuple) -> np.ndarray:
+def _check_result_array(result: Optional[npt.NDArray],
+                        shape: tuple) -> npt.NDArray:
     """Check if the result array is ok to use.
 
     The `result` array must meet the following requirements:
@@ -182,14 +181,13 @@ def _check_result_array(result: Optional[np.ndarray],
     return result
 
 
-# typing: numpy
 @check_coords('reference', 'configuration', reduce_result_if_single=False,
               check_lengths_match=False, allow_atomgroup=True)
-def distance_array(reference: Union[np.ndarray, 'AtomGroup'],
-                   configuration: Union[np.ndarray, 'AtomGroup'],
-                   box: Optional[np.ndarray] = None,
-                   result: Optional[np.ndarray] = None,
-                   backend: str = "serial") -> np.ndarray:
+def distance_array(reference: Union[npt.NDArray, 'AtomGroup'],
+                   configuration: Union[npt.NDArray, 'AtomGroup'],
+                   box: Optional[npt.NDArray] = None,
+                   result: Optional[npt.NDArray] = None,
+                   backend: str = "serial") -> npt.NDArray:
     """Calculate all possible distances between a reference set and another
     configuration.
 
@@ -272,12 +270,11 @@ def distance_array(reference: Union[np.ndarray, 'AtomGroup'],
     return distances
 
 
-# typing: numpy
 @check_coords('reference', reduce_result_if_single=False, allow_atomgroup=True)
-def self_distance_array(reference: Union[np.ndarray, 'AtomGroup'],
-                        box: Optional[np.ndarray] = None,
-                        result: Optional[np.ndarray] = None,
-                        backend: str = "serial") -> np.ndarray:
+def self_distance_array(reference: Union[npt.NDArray, 'AtomGroup'],
+                        box: Optional[npt.NDArray] = None,
+                        result: Optional[npt.NDArray] = None,
+                        backend: str = "serial") -> npt.NDArray:
     """Calculate all possible distances within a configuration `reference`.
 
     If the optional argument `box` is supplied, the minimum image convention is
@@ -359,10 +356,10 @@ def self_distance_array(reference: Union[np.ndarray, 'AtomGroup'],
 @check_coords('reference', 'configuration', enforce_copy=False,
               reduce_result_if_single=False, check_lengths_match=False,
               allow_atomgroup=True)
-def capped_distance(reference: Union[np.ndarray, 'AtomGroup'],
-                    configuration: Union[np.ndarray, 'AtomGroup'],
+def capped_distance(reference: Union[npt.NDArray, 'AtomGroup'],
+                    configuration: Union[npt.NDArray, 'AtomGroup'],
                     max_cutoff: float, min_cutoff: Optional[float] = None,
-                    box: Optional[np.ndarray] = None,
+                    box: Optional[npt.NDArray] = None,
                     method: Optional[str] = None,
                     return_distances: Optional[bool] = True):
     """Calculates pairs of indices corresponding to entries in the `reference`
@@ -455,8 +452,8 @@ def capped_distance(reference: Union[np.ndarray, 'AtomGroup'],
     # The check_coords decorator made sure that reference and configuration
     # are arrays of positions. Mypy does not know about that so we have to
     # tell it.
-    reference_positions: np.ndarray = reference  # type: ignore
-    configuration_positions: np.ndarray = configuration  # type: ignore
+    reference_positions: npt.NDArray = reference  # type: ignore
+    configuration_positions: npt.NDArray = configuration  # type: ignore
     function = _determine_method(reference_positions, configuration_positions,
                                  max_cutoff, min_cutoff=min_cutoff,
                                  box=box, method=method)
@@ -465,9 +462,9 @@ def capped_distance(reference: Union[np.ndarray, 'AtomGroup'],
                     box=box, return_distances=return_distances)
 
 
-def _determine_method(reference: np.ndarray, configuration: np.ndarray,
+def _determine_method(reference: npt.NDArray, configuration: npt.NDArray,
                       max_cutoff: float, min_cutoff: Optional[float] = None,
-                      box: Optional[np.ndarray] = None,
+                      box: Optional[npt.NDArray] = None,
                       method: Optional[str] = None) -> Callable:
     """Guesses the fastest method for capped distance calculations based on the
     size of the coordinate sets and the relative size of the target volume.
@@ -541,10 +538,10 @@ def _determine_method(reference: np.ndarray, configuration: np.ndarray,
 @check_coords('reference', 'configuration', enforce_copy=False,
               reduce_result_if_single=False, check_lengths_match=False,
               allow_atomgroup=True)
-def _bruteforce_capped(reference: Union[np.ndarray, 'AtomGroup'],
-                       configuration: Union[np.ndarray, 'AtomGroup'],
+def _bruteforce_capped(reference: Union[npt.NDArray, 'AtomGroup'],
+                       configuration: Union[npt.NDArray, 'AtomGroup'],
                        max_cutoff: float, min_cutoff: Optional[float] = None,
-                       box: Optional[np.ndarray] = None,
+                       box: Optional[npt.NDArray] = None,
                        return_distances: Optional[bool] = True):
     """Capped distance evaluations using a brute force method.
 
@@ -628,10 +625,10 @@ def _bruteforce_capped(reference: Union[np.ndarray, 'AtomGroup'],
 @check_coords('reference', 'configuration', enforce_copy=False,
               reduce_result_if_single=False, check_lengths_match=False,
               allow_atomgroup=True)
-def _pkdtree_capped(reference: Union[np.ndarray, 'AtomGroup'],
-                    configuration: Union[np.ndarray, 'AtomGroup'],
+def _pkdtree_capped(reference: Union[npt.NDArray, 'AtomGroup'],
+                    configuration: Union[npt.NDArray, 'AtomGroup'],
                     max_cutoff: float, min_cutoff: Optional[float] = None,
-                    box: Optional[np.ndarray] = None,
+                    box: Optional[npt.NDArray] = None,
                     return_distances: Optional[bool] = True):
     """Capped distance evaluations using a KDtree method.
 
@@ -720,10 +717,10 @@ def _pkdtree_capped(reference: Union[np.ndarray, 'AtomGroup'],
 @check_coords('reference', 'configuration', enforce_copy=False,
               reduce_result_if_single=False, check_lengths_match=False,
               allow_atomgroup=True)
-def _nsgrid_capped(reference: Union[np.ndarray, 'AtomGroup'],
-                   configuration: Union[np.ndarray, 'AtomGroup'],
+def _nsgrid_capped(reference: Union[npt.NDArray, 'AtomGroup'],
+                   configuration: Union[npt.NDArray, 'AtomGroup'],
                    max_cutoff: float, min_cutoff: Optional[float] = None,
-                   box: Optional[np.ndarray] = None,
+                   box: Optional[npt.NDArray] = None,
                    return_distances: Optional[bool] = True):
     """Capped distance evaluations using a grid-based search method.
 
@@ -829,10 +826,10 @@ def _nsgrid_capped(reference: Union[np.ndarray, 'AtomGroup'],
 @check_coords('reference', enforce_copy=False,
               reduce_result_if_single=False, check_lengths_match=False,
               allow_atomgroup=True)
-def self_capped_distance(reference: Union[np.ndarray, 'AtomGroup'],
+def self_capped_distance(reference: Union[npt.NDArray, 'AtomGroup'],
                          max_cutoff: float,
                          min_cutoff: Optional[float] = None,
-                         box: Optional[np.ndarray] = None,
+                         box: Optional[npt.NDArray] = None,
                          method: Optional[str] = None,
                          return_distances: Optional[bool] = True):
     """Calculates pairs of indices corresponding to entries in the `reference`
@@ -926,7 +923,7 @@ def self_capped_distance(reference: Union[np.ndarray, 'AtomGroup'],
     # The check_coords decorator made sure that reference is an
     # array of positions. Mypy does not know about that so we have to
     # tell it.
-    reference_positions: np.ndarray = reference  # type: ignore
+    reference_positions: npt.NDArray = reference  # type: ignore
     function = _determine_method_self(reference_positions,
                                       max_cutoff, min_cutoff=min_cutoff,
                                       box=box, method=method)
@@ -934,9 +931,9 @@ def self_capped_distance(reference: Union[np.ndarray, 'AtomGroup'],
                     return_distances=return_distances)
 
 
-def _determine_method_self(reference: np.ndarray, max_cutoff: float,
+def _determine_method_self(reference: npt.NDArray, max_cutoff: float,
                            min_cutoff: Optional[float] = None,
-                           box: Optional[np.ndarray] = None,
+                           box: Optional[npt.NDArray] = None,
                            method: Optional[str] = None):
     """Guesses the fastest method for capped distance calculations based on the
     size of the `reference` coordinate set and the relative size of the target
@@ -1001,10 +998,10 @@ def _determine_method_self(reference: np.ndarray, max_cutoff: float,
 
 @check_coords('reference', enforce_copy=False, reduce_result_if_single=False,
               allow_atomgroup=True)
-def _bruteforce_capped_self(reference: Union[np.ndarray, 'AtomGroup'],
+def _bruteforce_capped_self(reference: Union[npt.NDArray, 'AtomGroup'],
                             max_cutoff: float,
                             min_cutoff: Optional[float] = None,
-                            box: Optional[np.ndarray] = None,
+                            box: Optional[npt.NDArray] = None,
                             return_distances: Optional[bool] = True):
     """Capped distance evaluations using a brute force method.
 
@@ -1084,10 +1081,10 @@ def _bruteforce_capped_self(reference: Union[np.ndarray, 'AtomGroup'],
 
 @check_coords('reference', enforce_copy=False, reduce_result_if_single=False,
               allow_atomgroup=True)
-def _pkdtree_capped_self(reference: Union[np.ndarray, 'AtomGroup'],
+def _pkdtree_capped_self(reference: Union[npt.NDArray, 'AtomGroup'],
                          max_cutoff: float,
                          min_cutoff: Optional[float] = None,
-                         box: Optional[np.ndarray] = None,
+                         box: Optional[npt.NDArray] = None,
                          return_distances: Optional[bool] = True):
     """Capped distance evaluations using a KDtree method.
 
@@ -1168,10 +1165,10 @@ def _pkdtree_capped_self(reference: Union[np.ndarray, 'AtomGroup'],
 
 @check_coords('reference', enforce_copy=False, reduce_result_if_single=False,
               allow_atomgroup=True)
-def _nsgrid_capped_self(reference: Union[np.ndarray, 'AtomGroup'],
+def _nsgrid_capped_self(reference: Union[npt.NDArray, 'AtomGroup'],
                         max_cutoff: float,
                         min_cutoff: Optional[float] = None,
-                        box: Optional[np.ndarray] = None,
+                        box: Optional[npt.NDArray] = None,
                         return_distances: Optional[bool] = True):
     """Capped distance evaluations using a grid-based search method.
 
@@ -1363,13 +1360,12 @@ def transform_StoR(coords, box, backend="serial"):
     return coords
 
 
-# typing: numpy
 @check_coords('coords1', 'coords2', allow_atomgroup=True)
-def calc_bonds(coords1: Union[np.ndarray, 'AtomGroup'],
-               coords2: Union[np.ndarray, 'AtomGroup'],
-               box: Optional[np.ndarray] = None,
-               result: Optional[np.ndarray] = None,
-               backend: str = "serial") -> np.ndarray:
+def calc_bonds(coords1: Union[npt.NDArray, 'AtomGroup'],
+               coords2: Union[npt.NDArray, 'AtomGroup'],
+               box: Optional[npt.NDArray] = None,
+               result: Optional[npt.NDArray] = None,
+               backend: str = "serial") -> npt.NDArray:
     """Calculates the bond lengths between pairs of atom positions from the two
     coordinate arrays `coords1` and `coords2`, which must contain the same
     number of coordinates. ``coords1[i]`` and ``coords2[i]`` represent the
@@ -1455,14 +1451,13 @@ def calc_bonds(coords1: Union[np.ndarray, 'AtomGroup'],
     return bondlengths
 
 
-# typing: numpy
 @check_coords('coords1', 'coords2', 'coords3', allow_atomgroup=True)
-def calc_angles(coords1: Union[np.ndarray, 'AtomGroup'],
-                coords2: Union[np.ndarray, 'AtomGroup'],
-                coords3: Union[np.ndarray, 'AtomGroup'],
-                box: Optional[np.ndarray] = None,
-                result: Optional[np.ndarray] = None,
-                backend: str = "serial") -> np.ndarray:
+def calc_angles(coords1: Union[npt.NDArray, 'AtomGroup'],
+                coords2: Union[npt.NDArray, 'AtomGroup'],
+                coords3: Union[npt.NDArray, 'AtomGroup'],
+                box: Optional[npt.NDArray] = None,
+                result: Optional[npt.NDArray] = None,
+                backend: str = "serial") -> npt.NDArray:
     """Calculates the angles formed between triplets of atom positions from the
     three coordinate arrays `coords1`, `coords2`, and `coords3`. All coordinate
     arrays must contain the same number of coordinates.
@@ -1558,15 +1553,14 @@ def calc_angles(coords1: Union[np.ndarray, 'AtomGroup'],
     return angles
 
 
-# typing: numpy
 @check_coords('coords1', 'coords2', 'coords3', 'coords4', allow_atomgroup=True)
-def calc_dihedrals(coords1: Union[np.ndarray, 'AtomGroup'],
-                   coords2: Union[np.ndarray, 'AtomGroup'],
-                   coords3: Union[np.ndarray, 'AtomGroup'],
-                   coords4: Union[np.ndarray, 'AtomGroup'],
-                   box: Optional[np.ndarray] = None,
-                   result: Optional[np.ndarray] = None,
-                   backend: str = "serial") -> np.ndarray:
+def calc_dihedrals(coords1: Union[npt.NDArray, 'AtomGroup'],
+                   coords2: Union[npt.NDArray, 'AtomGroup'],
+                   coords3: Union[npt.NDArray, 'AtomGroup'],
+                   coords4: Union[npt.NDArray, 'AtomGroup'],
+                   box: Optional[npt.NDArray] = None,
+                   result: Optional[npt.NDArray] = None,
+                   backend: str = "serial") -> npt.NDArray:
     r"""Calculates the dihedral angles formed between quadruplets of positions
     from the four coordinate arrays `coords1`, `coords2`, `coords3`, and
     `coords4`, which must contain the same number of coordinates.
@@ -1677,11 +1671,10 @@ def calc_dihedrals(coords1: Union[np.ndarray, 'AtomGroup'],
     return dihedrals
 
 
-# typing: numpy
 @check_coords('coords', allow_atomgroup=True)
-def apply_PBC(coords: Union[np.ndarray, 'AtomGroup'],
-              box: Optional[np.ndarray] = None,
-              backend: str = "serial") -> np.ndarray:
+def apply_PBC(coords: Union[npt.NDArray, 'AtomGroup'],
+              box: Optional[npt.NDArray] = None,
+              backend: str = "serial") -> npt.NDArray:
     """Moves coordinates into the primary unit cell.
 
     Parameters
@@ -1717,7 +1710,7 @@ def apply_PBC(coords: Union[np.ndarray, 'AtomGroup'],
     """
     # coords is an array, the check_coords decorator made sure of that.
     # Mypy, however, is not aware of that so we have to tell it explicitly.
-    coords_array: np.ndarray = coords  # type: ignore
+    coords_array: npt.NDArray = coords  # type: ignore
 
     if len(coords_array) == 0:
         return coords_array
@@ -1730,9 +1723,8 @@ def apply_PBC(coords: Union[np.ndarray, 'AtomGroup'],
     return coords_array
 
 
-# typing: numpy
 @check_coords('vectors', enforce_copy=False, enforce_dtype=False)
-def minimize_vectors(vectors: np.ndarray, box: np.ndarray) -> np.ndarray:
+def minimize_vectors(vectors: npt.NDArray, box: npt.NDArray) -> npt.NDArray:
     """Apply minimum image convention to an array of vectors
 
     This function is required for calculating the correct vectors between two
