@@ -159,8 +159,7 @@ class PeriodicKDTree(object):
             self.ckdt = cKDTree(self.coords, self.leafsize)
         self._built = True
 
-    #  typing: numpy
-    def search(self, centers: npt.ArrayLike, radius: float) -> np.ndarray:
+    def search(self, centers: npt.ArrayLike, radius: float) -> npt.NDArray:
         """Search all points within radius from centers and their periodic images.
 
         All the centers coordinates are wrapped around the central cell
@@ -210,8 +209,7 @@ class PeriodicKDTree(object):
         self._indices = np.asarray(unique_int_1d(self._indices))
         return self._indices
 
-    # typing: numpy
-    def get_indices(self) -> np.ndarray:
+    def get_indices(self) -> npt.NDArray:
         """Return the neighbors from the last query.
 
         Returns
@@ -221,8 +219,7 @@ class PeriodicKDTree(object):
         """
         return self._indices
 
-    # typing: numpy
-    def search_pairs(self, radius: float) -> np.ndarray:
+    def search_pairs(self, radius: float) -> npt.NDArray:
         """Search all the pairs within a specified radius
 
         Parameters
